<resources>
    <string name="app_name">kiNOW</string>
    <string name="location">Location</string>
    <string name="movies">Movies</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="contentDescription">Default Content Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movieTitle">Spiderman and Avangers fight against the world and there are Aliens</string>
    <string name="movieDescription">Description</string>
    <string name="movieLongDescription">Description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</string>
    <string name="duration">xxx Min</string>
    <string name="fsk">FSK: xy</string>
    <string name="rating">x/y Stars</string>
    <string name="genre">Genre</string>
    <string name="header_actor">Actors:</string>
    <string name="actor">Stephen Hawking</string>
    <string name="header_regisseur">Regisseur:</string>
    <string name="regisseur">Steven Spielberg</string>
    <string name="playtime">12:34</string>
    <string name="hall">Hall</string>
    <string name="date">Date</string>
    <string name="year">2019</string>
    <string name="place">Hollywood, LosAngeles</string>
    <string name="published">2017</string>
    <string name="locTitle">LocationTitle</string>
    <string name="locDescription">Description of Location</string>
    <string name="errorMessage">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="trailer">Trailer</string>
    <string name="login">Login</string>
    <string name="big_login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="big_sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="big_register">REGISTER</string>
    <string name="no_account_yet">Don´t have an account? Create one!</string>
    <string name="already_member">Already a member? Login here!</string>
    <string name="agree">I agree to the </string>
    <string name="terms">Terms of Service</string>
    <string name="dot">.</string>
    <string name="sixteen">I confirm that I am at least 16 years old.</string>
    <string name="email">E-Mail</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="new_pwd">Enter a new Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="guest">Continue as guest.</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="screen">SCREEN</string>
    <string name="book_movie">Book</string>
    <string name="bookNow">Book now</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="hey">Hey, you!</string>
    <string name="logout_btn">Logout</string>
    <string name="set_new_pwd">Set new password</string>
    <string name="hint_newPwd">New Password</string>
    <string name="save">Save</string>
    <string name="header_date">Date:</string>
    <string name="header_time">Time:</string>
    <string name="header_seat">Seats:</string>
    <string name="seats">C2, C3, C4</string>
    <string name="header_price">Price:</string>
    <string name="price">18€</string>
    <string name="buy_btn">Buy</string>
    <string name="reserve_btn">Reserve</string>
    <string name="delete_btn">Delete</string>
    <string name="header_purchases">Purchases:</string>
    <string name="header_cart">Shopping Cart:</string>
    <string name="buy_all">Buy All</string>
    <string name="warning">WARNING</string>
    <string name="alert_text">Some of your reservations are not completed yet. These are lost at the logout. \nAre you sure that you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">CLOSE APP</string>
    <string name="finish_text">This will close the app. \nAre you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="method">PAYMENT METHOD</string>
    <string name="choose_method">Please choose one of the following payment methods:</string>
    <string name="pay">Pay now</string>
    <string name="paypal">PayPal</string>
    <string name="mastercard">MasterCard</string>
    <string name="cardnumber">Card Number</string>
    <string name="security_code">Security Code</string>
    <string name="expire">Expiration Date</string>
    <string name="card_holder">Card Holder`s Name</string>
</resources>