<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cart_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/item_container"
                android:layout_width="match_parent"
                android:layout_height="153dp">

            <ImageView
                android:id="@+id/cart_movieImage"
                android:contentDescription="@string/contentDescription"
                android:layout_width="115dp"
                android:layout_height="153dp"
                app:srcCompat="@drawable/little_movie_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/cart_movieImage"
                android:layout_toEndOf="@+id/cart_movieImage"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/movieTitle"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/header_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/header_date"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/cart_item_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/date"
                        android:layout_weight="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/header_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/header_time"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/cart_item_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/playtime"
                        android:layout_weight="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/header_seat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/header_seat"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/cart_item_seats"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/seats"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:layout_weight="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/header_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/header_price"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/cart_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/price"
                        android:layout_weight="5"/>

                </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/item_container"
            android:weightSum="9">

            <Button
                android:id="@+id/buy_ticket_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/mint"
                android:textColor="@color/white"
                android:text="@string/buy_btn"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/reserve_ticket_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:text="@string/reserve_btn"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/delete_ticket_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:textColor="@color/white"
                android:text="@string/delete_btn"
                android:layout_weight="3"/>

        </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>