<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/finish_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/finish_linLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/warning_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="22sp"
                    app:fontFamily="sans-serif-medium"
                    android:text="@string/finish"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/finish_square_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/square"
                android:layout_below="@+id/finish_linLay"
                android:contentDescription="@string/contentDescription"
                android:layout_centerHorizontal="true"
                android:tint="@color/red"
                android:layout_marginTop="-10dp"
                android:rotation="45"/>

            <TextView
                android:id="@+id/finish_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/finish_square_img"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/finish_text"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/finish_text"
                android:weightSum="10">

                <Button
                    android:id="@+id/finish_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/yes"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:background="@color/mint"
                    android:layout_weight="5"/>

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:background="@color/red"
                    android:layout_weight="5"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>